# stardew

./: .gitignore  .gitmodules  README.md  REPORT.md  pyproject.toml  pyrightconfig.json  requirements-kunwar-freeze.txt  requirements-optional.txt  requirements-tf.txt  requirements-torch.txt  requirements.txt
.github/workflows/: ci.yml
compiler/frontend/: common.py  tf.py  torch.py
compiler/frontends/: common.py  tf.py  torch.py
compiler/frontends/pytorch/: compiler.py
compiler/frontends/tensorflow/: compiler.py
examples/: lower_demucs.py  resnet_tf.py
examples/alexnet_torch/: main.py  matmul.mlir
examples/demucs/: main.py
examples/matmul-relu-bias/: main.py
examples/matmul_tf/: main.py
examples/matmul_torch/: assistant.py  main.py
examples/mlp_torch/: main.py
examples/resnet_tf/: main.py  resnet50.mlir
examples/resnet_torch/: main.py  resnet50.mlir
models/: __init__.py
stardew/: torch.py
stardew/analysis/zigzag/: .gitignore  accelerator.py  main.py  mapping.py  test.mlir  test2.mlir
stardew/backend/: torch_mlir_backend.py
stardew/frontend/: __init__.py  common.py  tf.py  torch.py
tests/pytorch/: test_alexnet.py  test_mlp.py
tests/tensorflow/: test_matmul.py
